--- a/Spotify_Freemium/TODO.txt
+++ b/Spotify_Freemium/TODO.txt
@@ -1,2 +1,2 @@
-word wrapping issue for the 120 column limitation that leads to the album art becoming distorted
+(fixed, kinda, with changing limits) word wrapping issue for the 120 column limitation that leads to the album art becoming distorted
 make code overall cleaner and easier to manage and iterate
