--- a/Spotify_Freemium/TODO.txt
+++ b/Spotify_Freemium/TODO.txt
@@ -1,2 +1,3 @@
 (fixed, kinda, with changing limits) word wrapping issue for the 120 column limitation that leads to the album art becoming distorted
 make code overall cleaner and easier to manage and iterate
+fix issue that makes the same song info come up twice when the song changes
